syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Runner {
    string address = 1;
    bytes client_key = 2;
}

message LBGroupId {
    string id = 1;
}

message LBGroupMembership {
    LBGroupId group_id = 1;
    repeated Runner runners = 2;
}

message CapacitySnapshot {
    LBGroupId group_id = 1;
    uint64 mem_mb_total = 2;
}

message CapacitySnapshotList {
    google.protobuf.Timestamp ts = 1;
    string lb_id = 2;   
    repeated CapacitySnapshot snapshots = 3;
}

service NodePoolScaler {
  rpc AdvertiseCapacity (CapacitySnapshotList) returns (google.protobuf.Empty) {}
}

service RunnerManager {
  rpc GetLBGroup(LBGroupId) returns (LBGroupMembership) {}
}